EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==03/27/2010==
Trevius: SoD - A couple more Opcode updates.
Trevius: SoD - Some group structures work, but grouping is still not functional.
Derision: SoD - Fixed random client crashes due to spawn packets and invisible mobs should now be invisible.
Derision: SoD - Did a basic Encode on OP_WhoAllResponse. Still needs work for various flags (LD/Trader/Buyer) etc.

==03/26/2010==
Trevius: SoD - Finished updated Opcodes and they should now be caught up with what we have in SoF.
Trevius: SoD - Updated Item Struct and now 1 inventory item can load correctly.
Trevius: SoD - Updated Position Update packet structures.
Trevius: SoD - Character Inventory now fully loads.
Trevius: SoD - AAs now load and appear to function properly.
Derision: SoD - Spawns work, sometimes. Client will crash randomly sometimes when receiving spawns
Derision: SoD - Added SoD.cpp to .vcproj files
Derision: SoD - Found showname field in Spawn Struct.
Derision: SoD - Identified equip_chest2 field in Spawn Struct.
Trevius: SoD - Looting now works.
Trevius: SoD - Commands that display item links now show links correctly.

==03/25/2010==
Trevius: SoD - Updated PlayerProfile_Struct and CharacterSelectEntry_Struct
Trevius: SoD - Updated Spawn_Struct and the encode (hackish for now), but can get in game with it!

==03/24/2010==
Trevius: SoD - Updated the NewZone struct and encode

==03/23/2010==
Trevius: SoD - Initial addition of the Seeds of Destruction patch files.  Note: The SoD Client is not functional at all yet, but work has begun!

==03/22/2010==
Derision: Implemented the Guild Bank.

REQUIRED SQL: utils/sql/svn/1293_guild_bank.sql

==03/20/2010==
cavedude: Added $client->UpdateGroupAAs(), exported GetGroupPoints() and GetRaidPoints() to Perl.

==03/19/2010==
cavedude: Added $client->GetLDoNPointsTheme() Perl function.